--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Flask>=1.0.3
-gevent>=1.2.2
+gevent>=1.5.0
 Brotli>=1.0.7
 PySocks>=1.6.8
 urllib3>=1.24.1
 defusedxml>=0.5.0
 cachetools>=4.0.0
 stem>=1.8.0
-gevent==1.5.0
-pysqlite3==0.4.6
+pysqlite3>=0.4.6
